# age-discovery

./: Cargo.toml  README.md
assets/elf/: texture.aseprite
assets/tilemaps/: simple-forest.ldtk
src/: main.rs
src/game/: mod.rs
src/game/general/: mod.rs
src/game/general/living/: mod.rs
src/game/general/living/player/: mod.rs
src/game/general/physics/: mod.rs
src/game/general/props/: mod.rs
src/modules/: mod.rs
src/modules/camera/: components.rs  systems.rs
src/modules/init/: systems.rs
src/modules/input/: systems.rs
src/modules/living/: components.rs  consts.rs  mod.rs  systems.rs
src/modules/physics/: components.rs  mod.rs  systems.rs
src/modules/physics/sprite_change/: components.rs  consts.rs  mod.rs  systems.rs
src/modules/prop/: components.rs
src/modules/rng/: components.rs
src/modules/simple/: components.rs
src/modules/sound/: components.rs  consts.rs  mod.rs  system.rs
