[package]
name = "ages-discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.15.0"
bevy_ecs_ldtk = "0.5.0"
bevy_pixel_camera = "0.3.0"
