[package]
name = "ages-discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy-inspector-egui = "0.15.0"
bevy_ecs_ldtk = "0.5.0"
bevy_pixel_camera = "0.3.0"
rand = "0.8.5"

[dependencies.bevy]
version = "0.9.1"
default-features = false
features = [
    "render",
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_gilrs",
    "png",
    "hdr",
    "filesystem_watcher",
    "x11"
]

[dependencies.bevy_kira_audio]
version = "0.13.0"
default-features = false
features = [
    "wav",
]